Recievers and TranslatorConfiguration
